fix overflow

--- a/themes/docparty/source/css/highlighting.scss
+++ b/themes/docparty/source/css/highlighting.scss
@@ -4,7 +4,7 @@
   margin: 0;
   margin-top: 16px;
   padding: 4px 24px;
-  overflow-x: scroll;
+  overflow-x: auto;
   position: relative;
 
   &:after {
